fix bug UI on mobile screen

--- a/style.css
+++ b/style.css
@@ -349,6 +349,7 @@ input:focus-visible,
 }
 #date {
   cursor: pointer;
+  font-size: 16px;
 }
 .date-picker-popup {
   position: absolute;
